working exact distance checks for 2d queries SERVER-2115